E2E models and discussion about prediction / LLMs

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,54 @@
+@article{feng2024unitraj,
+  title =        {UniTraj: A Unified Framework for Scalable Vehicle Trajectory
+                  Prediction},
+  author =       {Feng, Lan and Bahari, Mohammadhossein and Amor, Kaouther
+                  Messaoud Ben and Zablocki, {\'E}loi and Cord, Matthieu and
+                  Alahi, Alexandre},
+  journal =      {arXiv preprint arXiv:2403.15098},
+  year =         2024
+}
+
+
+@InProceedings{ambrosia24:icra,
+  author =       {C. Ambrosia and F. Richter and Z-Y. Chiu and N. Shinde and F.
+                  Liu and H. I. Christensen and M. Yip},
+  title =        {Robust Surgical Tool Tracking with Pixel-based Probabilities
+                  for Projected Geometric Primitives},
+  booktitle =    {IEEE International Conference on Robotics and Automation (ICRA
+                  2024)},
+  year =         2024,
+  pages =        {15455--15462},
+  month =        {May},
+  address =      {Yokohama, JP},
+  organization = {IEEE/RSJ}
+}
+
+@article{li2023scenarionet,
+  title =        {ScenarioNet: Open-Source Platform for Large-Scale Traffic
+                  Scenario Simulation and Modeling},
+  author =       {Li, Quanyi and Peng, Zhenghao and Feng, Lan and Liu, Zhizheng
+                  and Duan, Chenda and Mo, Wenjie and Zhou, Bolei},
+  journal =      {Advances in Neural Information Processing Systems},
+  year =         {2023}
+}
+
+@article{li2021metadrive,
+  title =        {Metadrive: Composing diverse driving scenarios for
+                  generalizable reinforcement learning},
+  author =       {Li, Quanyi and Peng, Zhenghao and Feng, Lan and Zhang, Qihang
+                  and Xue, Zhenghai and Zhou, Bolei},
+  journal =      {IEEE Transactions on Pattern Analysis and Machine
+                  Intelligence},
+  year =         {2022}
+}
+
+@article{zhou2015cnnlocalization,
+  title =        {{Learning Deep Features for Discriminative Localization.}},
+  author =       {Zhou, B. and Khosla, A. and Lapedriza. A. and Oliva, A. and
+                  Torralba, A.},
+  journal =      {CVPR},
+  year =         {2016}
+}
 
 @misc{huPlanningorientedAutonomousDriving2023a,
   title =        {Planning-oriented {Autonomous} {Driving}},
