--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,45 @@
+@article{8667866,
+  author =       {Rasouli, Amir and Tsotsos, John K.},
+  journal =      {IEEE Transactions on Intelligent Transportation Systems},
+  title =        {Autonomous Vehicles That Interact With Pedestrians: A Survey
+                  of Theory and Practice},
+  year =         2020,
+  volume =       21,
+  number =       3,
+  pages =        {900-918},
+  keywords =     {Autonomous
+                  vehicles;Roads;Cameras;Automobiles;Observers;Autonomous
+                  vehicles;pedestrian behavior;traffic interaction;survey},
+  doi =          {10.1109/TITS.2019.2901817}
+}
+
+@inproceedings{Rasouli2019PIE,
+  author =       {Amir Rasouli and Iuliia Kotseruba and Toni Kunic and John K.
+                  Tsotsos},
+  title =        {{PIE}: {A} Large-Scale Dataset and Models for Pedestrian
+                  Intention Estimation and Trajectory Prediction},
+  booktitle =    {International Conference on Computer Vision ({ICCV})},
+  year =         2019
+}
+
+@article{liang2023skilldiffuser,
+  title =        {SkillDiffuser: Interpretable Hierarchical Planning via Skill
+                  Abstractions in Diffusion-Based Task Execution},
+  author =       {Zhixuan Liang and Yao Mu and Hengbo Ma and Masayoshi Tomizuka
+                  and Mingyu Ding and Ping Luo},
+  journal =      {arXiv preprint arXiv:2312.11598},
+  year =         2023,
+}
+
+@inproceedings{zheng2023crossdataset,
+  title =        {Cross-Dataset Sensor Alignment: Making Visual 3D Object
+                  Detector Generalizable},
+  author =       {Liangtao Zheng and Yicheng Liu and Yue Wang and Hang Zhao},
+  booktitle =    {7th Annual Conference on Robot Learning},
+  year =         2023,
+  url =          {https://openreview.net/forum?id=dIgCPoy8E3}
+}
+
 @article{feng2024unitraj,
   title =        {UniTraj: A Unified Framework for Scalable Vehicle Trajectory
                   Prediction},
