autonomous driving and amr warehousing

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,83 @@
+@misc{keith2024review,
+  title =        {Review of Autonomous Mobile Robots for the Warehouse
+                  Environment},
+  author =       {Russell Keith and Hung Manh La},
+  year =         {2024},
+  eprint =       {2406.08333},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO}
+}
+
+@article{Dauner2023PartingWM,
+  title =        {Parting with Misconceptions about Learning-based Vehicle
+                  Motion Planning},
+  author =       {Daniel Dauner and Marcel Hallgarten and Andreas Geiger and
+                  Kashyap Chitta},
+  journal =      {ArXiv},
+  year =         {2023},
+  volume =       {abs/2306.07962},
+  url =          {https://api.semanticscholar.org/CorpusID:259145009}
+}
+
+@article{Caesar2021nuPlanAC,
+  title =        {nuPlan: A closed-loop ML-based planning benchmark for
+                  autonomous vehicles},
+  author =       {Holger Caesar and Juraj Kabzan and Kok Seang Tan and Whye Kit
+                  Fong and Eric M. Wolff and Alex Lang and Luke Fletcher and
+                  Oscar Beijbom and Sammy Omari},
+  journal =      {ArXiv},
+  year =         {2021},
+  volume =       {abs/2106.11810},
+  url =          {https://api.semanticscholar.org/CorpusID:235593036}
+}
+
+@INPROCEEDINGS{10160449,
+  author =       {Phan-Minh, Tung and Howington, Forbes and Chu, Ting-Sheng and
+                  Tomov, Momchil S. and Beaudoin, Robert E. and Lee, Sang Uk and
+                  Li, Nanxiang and Dicle, Caglayan and Findler, Samuel and
+                  Suarez-Ruiz, Francisco and Yang, Bo and Omari, Sammy and
+                  Wolff, Eric M.},
+  booktitle =    {2023 IEEE International Conference on Robotics and Automation
+                  (ICRA)},
+  title =        {DriveIRL: Drive in Real Life with Inverse Reinforcement
+                  Learning},
+  year =         2023,
+  pages =        {1544-1550},
+  keywords =     {Strips;Reinforcement learning;Lead;Reliability
+                  engineering;Entropy;Trajectory;Safety;ML-based
+                  Planning;Inverse Reinforcement Learning;Real-World
+                  Deployment;Self-Driving;Autonomous Vehicles;Urban
+                  Driving;Learning from Human Driving},
+  doi =          {10.1109/ICRA48891.2023.10160449}
+}
+
+@misc{Contributors2024interPlan,
+  title =        {interPlan: A challenging interactive closed-loop planning
+                  benchmark},
+  author =       {interPlan Contributors},
+  howpublished = {\url{https://github.com/mh0797/interPlan}},
+  year =         2024
+} 
+
+
+@inproceedings{Hallgarten2024interPlan,
+  title =        {Can Vehicle Motion Planning Generalize to Realistic Long-tail
+                  Scenarios?},
+  author =       {Marcel Hallgarten and Julian Zapata and Martin Stoll and
+                  Katrin Renz and Andreas Zell},
+  journal =      {arXiv preprint arXiv:2404.07569},
+  year =         {2024}
+} 
+
+@misc{malach2023autoregressive,
+  title =        {Auto-Regressive Next-Token Predictors are Universal Learners},
+  author =       {Eran Malach},
+  year =         2023,
+  eprint =       {2309.06979},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.LG}
+}
+
 @article{8667866,
   author =       {Rasouli, Amir and Tsotsos, John K.},
   journal =      {IEEE Transactions on Intelligent Transportation Systems},
