More splatter and multi-agent planning

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,60 @@
+@article{park2021hypernerf,
+  author =       {Park, Keunhong and Sinha, Utkarsh and Hedman, Peter and
+                  Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and
+                  Martin-Brualla, Ricardo and Seitz, Steven M.},
+  title =        {HyperNeRF: A Higher-Dimensional Representation for
+                  Topologically Varying Neural Radiance Fields},
+  journal =      {ACM Trans. Graph.},
+  issue_date =   {December 2021},
+  publisher =    {ACM},
+  volume =       {40},
+  number =       {6},
+  month =        {dec},
+  year =         {2021},
+  articleno =    {238},
+}
+
+@Article{kerbl3Dgaussians,
+  author =       {Kerbl, Bernhard and Kopanas, Georgios and Leimk{\"u}hler,
+                  Thomas and Drettakis, George},
+  title =        {3D Gaussian Splatting for Real-Time Radiance Field Rendering},
+  journal =      {ACM Transactions on Graphics},
+  number =       4,
+  volume =       42,
+  month =        {July},
+  year =         2023,
+  url =          {https://repo-sam.inria.fr/fungraph/3d-gaussian-splatting/}
+}
+
+@misc{gu2024producing,
+  title =        {Producing and Leveraging Online Map Uncertainty in Trajectory
+                  Prediction},
+  author =       {Xunjiang Gu and Guanyu Song and Igor Gilitschenski and Marco
+                  Pavone and Boris Ivanovic},
+  year =         {2024},
+  eprint =       {2403.16439},
+  archivePrefix ={arXiv},
+  primaryClass = {id='cs.RO' full_name='Robotics' is_active=True alt_name=None
+                  in_archive='cs' is_general=False description='Roughly includes
+                  material in ACM Subject Class I.2.9.'}
+}
+
+@misc{li2024hydramdp,
+  title =        {Hydra-MDP: End-to-end Multimodal Planning with Multi-target
+                  Hydra-Distillation},
+  author =       {Zhenxin Li and Kailin Li and Shihao Wang and Shiyi Lan and
+                  Zhiding Yu and Yishen Ji and Zhiqi Li and Ziyue Zhu and Jan
+                  Kautz and Zuxuan Wu and Yu-Gang Jiang and Jose M. Alvarez},
+  year =         {2024},
+  eprint =       {2406.06978},
+  archivePrefix ={arXiv},
+  primaryClass = {id='cs.CV' full_name='Computer Vision and Pattern Recognition'
+                  is_active=True alt_name=None in_archive='cs' is_general=False
+                  description='Covers image processing, computer vision, pattern
+                  recognition, and scene understanding. Roughly includes
+                  material in ACM Subject Classes I.2.10, I.4, and I.5.'}
+}
+
 @misc{keith2024review,
   title =        {Review of Autonomous Mobile Robots for the Warehouse
                   Environment},
